<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="6.66dp"
	android:paddingRight="6.66dp">

	<EditText
		android:id="@+id/memo_write_title_editText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="3.33dp"
		android:gravity="center_vertical"
		android:padding="3.33dp"
		android:singleLine="true"
		android:hint="@string/memo_enter_receiver"
		android:textAppearance="@style/CommonTextAppearanceListContents"
		android:background="@drawable/msg_search_input" />
	<EditText
		android:id="@+id/memo_write_content_editText"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@+id/memo_write_title_editText"
		android:layout_above="@+id/memo_write_send_box_checkBox"
		android:layout_marginTop="6.66dp"
		android:padding="3.33dp"
		android:gravity="top"
		android:hint="@string/enter_text"
		android:inputType="textMultiLine"
		android:scrollbars="vertical"
		android:scrollbarStyle="outsideOverlay"
		android:textAppearance="@style/CommonTextAppearanceListContents"
		android:background="@drawable/msg_search_input" />
		
	<CheckBox 
		android:id="@+id/memo_write_send_box_checkBox"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:layout_above="@+id/memo_write_button_layout"
		android:text="@string/memo_send_box_check_message"
		android:textAppearance="@style/DarkGrayBaseSmallText" />
	
	<LinearLayout
		android:id="@+id/memo_write_button_layout"
		android:layout_width="match_parent" 
		android:layout_height="59.33dip"
		android:layout_alignParentBottom="true"
		android:background="@drawable/winset_softkey_bg"  >
	
		<Button 
			android:id="@+id/memo_write_softkey_left_button" 
			android:layout_width="0dip"
			android:layout_height="50dip" 
			android:layout_weight="1"
			android:layout_marginTop="6.67dip" 
			android:layout_marginLeft="3.33dip" 
			android:text="@string/button_ok"
			android:textSize="15sp"
			android:textColor="@color/dp_color002" />
		
		<Button 
			android:id="@+id/memo_write_softkey_right_button" 
			android:layout_width="0dip"
			android:layout_height="50dip" 
			android:layout_weight="1"
			android:layout_marginTop="6.67dip" 
			android:layout_marginRight="3.33dip"
			android:text="@string/button_cancel" 
			android:textSize="15sp"
			android:textColor="@color/dp_color002" />
	</LinearLayout>
</RelativeLayout>