<?xml version="1.0" encoding="utf-8"?>
<!--
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<TabWidget 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/dptabbar"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"> 
	
	<TextView
		android:id="@+id/communitytab"
        android:layout_width="0dip"
        android:layout_height="64dip"
        android:layout_weight="1"
        android:layout_marginLeft="-3dip"
        android:layout_marginRight="-3dip"
        android:paddingTop="7dip"
        android:paddingBottom="2dip"
        android:singleLine="true" 
        android:gravity="center"
        android:focusable="true"
        android:ellipsize="marquee"
        android:drawableTop="@drawable/ic_tab_community"
        android:text="@string/list_community"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/tab_indicator_text"
        android:background="@drawable/buttonbarbackground" />
	
	<TextView
		android:id="@+id/hardwaretab"
        android:layout_width="0dip"
        android:layout_height="64dip"
        android:layout_weight="1"
        android:layout_marginLeft="-3dip"
        android:layout_marginRight="-3dip"
        android:paddingTop="7dip"
        android:paddingBottom="2dip"
        android:singleLine="true" 
        android:gravity="center"
        android:focusable="true"
        android:ellipsize="marquee"
        android:drawableTop="@drawable/ic_tab_hardware"
        android:text="@string/list_hardware"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/tab_indicator_text"
        android:background="@drawable/buttonbarbackground" />
	
	<TextView
		android:id="@+id/softwaretab"
        android:layout_width="0dip"
        android:layout_height="64dip"
        android:layout_weight="1"
        android:layout_marginLeft="-3dip"
        android:layout_marginRight="-3dip"
        android:paddingTop="7dip"
        android:paddingBottom="2dip"
        android:singleLine="true" 
        android:gravity="center"
        android:focusable="true"
        android:ellipsize="marquee"
        android:drawableTop="@drawable/ic_tab_software"
        android:text="@string/list_software"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/tab_indicator_text"
        android:background="@drawable/buttonbarbackground" />
	
	<TextView
		android:id="@+id/bluraytab"
        android:layout_width="0dip"
        android:layout_height="64dip"
        android:layout_weight="1"
        android:layout_marginLeft="-3dip"
        android:layout_marginRight="-3dip"
        android:paddingTop="7dip"
        android:paddingBottom="2dip"
        android:singleLine="true" 
        android:gravity="center"
        android:focusable="true"
        android:ellipsize="marquee"
        android:drawableTop="@drawable/ic_tab_bluray"
        android:text="@string/list_bluray"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/tab_indicator_text"
        android:background="@drawable/buttonbarbackground" />
	
	<TextView
		android:id="@+id/smartphonetab"
        android:layout_width="0dip"
        android:layout_height="64dip"
        android:layout_weight="1"
        android:layout_marginLeft="-3dip"
        android:layout_marginRight="-3dip"
        android:paddingTop="7dip"
        android:paddingBottom="2dip"
        android:singleLine="true" 
        android:gravity="center"
        android:focusable="true"
        android:ellipsize="marquee"
        android:drawableTop="@drawable/ic_tab_smartphone"
        android:text="@string/list_smartphone"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/tab_indicator_text"
        android:background="@drawable/buttonbarbackground" />
</TabWidget>
